--- a/src/_static/css/RollingReact.css
+++ b/src/_static/css/RollingReact.css
@@ -3,8 +3,8 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite .5s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 2.5s linear;
+  height: 25vmin;
 }
 
 .App-header {
@@ -23,6 +23,10 @@
   font-weight: 400;
   font-size: 0.8em;
   color: #df61fb;
+}
+
+.img {
+  padding: 15px 0px 10px 0px;
 }
 
 @keyframes App-logo-spin {
